modify some bugs

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                         <img id="search-button" alt="Search" title="Search" data-src="img/magnifying-glass.svg" class="iconic iconic-md" />
                     </div>
                     <div id="modalButton">
-                    <img id="modalButtonsvg" alt="switch" data-src="img/settings.svg" class="iconic iconic-md" /></div>
-<!--                    <button id="modalButton">Switch</button>-->
+                        <img id="modalButtonsvg" alt="switch" data-src="img/settings.svg" class="iconic iconic-md" /></div>
+                    <!--                    <button id="modalButton">Switch</button>-->
                 </div>
             </header>
 
         </div>
 
 
-        <div class="page searchPage" id="search-results">
-            <section class="titleMovie headers" >Results: Movie</section>
+        <div class="page searchPage hide" id="search-results">
+            <section class="titleMovie headers">Results: Movie</section>
             <section class="content flex-container"></section>
         </div>
 
@@ -38,15 +38,6 @@
             <section class="content flex-container"></section>
         </div>
     </main>
-    <footer id="imageAttri">
-        <img src="img/PrimaryLogo_Green.png" alt="Attribution" />
-    </footer>
-
-    <div class="attribution">
-
-    </div>
-
-
 
     <div class="overlay hide">&nbsp;</div>
 
@@ -69,4 +60,7 @@
     <script src="js/key.js"></script>
     <script src="js/main.js"></script>
 </body>
+<footer id="imageAttri">
+    <img src="img/PrimaryLogo_Green.png" alt="Attribution" />
+</footer>
 </html>
